# transpiler

./: .flake8  .gitignore  Dockerfile  README.md  pascal2csharp.py  pyproject.toml  requirements.txt  tests.py
.github/workflows/: run-tests.yml  unittest.yml
docs/: Project_Plan.xls  code_style.md  inspection.md  marketing_req.md  milestones.md  project_metrics.md  project_plan.md  softaware_test_plan.md  software_requirements.md  test_logs.md  Курсовая.docx  инспекция (команда №8).docx
examples/: supported_syntax.pas  supported_syntax.pas.cs  valid.pas
tests/: test_lexer.py  test_syntax_analyzer.py
transpiler/: __init__.py  __main__.py  base.py  code_generator.py  lexer.py  semantic_analyzer.py  settings.py  syntax_analyzer.py  tree.py
web/: __init__.py  __main__.py  app.py  backend.py  schemas.py  settings.py
web/static/: index.html  main.js  style.css
