[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transpiler"
version = "0.1.0"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU GPLv3",
    "Operating System :: OS Independent",
]
