[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transpiler"
version = "0.0.1"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU GPLv3",
    "Operating System :: OS Independent",
]
